(Sonar) Minor source changes for readability and reliability